--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -1,3 +1,24 @@
-body {
-  background-color: rebeccapurple;
+/* Fonts */
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('../assets/fonts/lato-v25-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Playfair';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url('../assets/fonts/playfair-v10-latin-600.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Playfair';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url('../assets/fonts/playfair-v10-latin-700.woff2') format('woff2');
 }
