--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,8 +1,11 @@
 .navbar {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    padding: 0.5rem 1rem;
     
     background-color: var(--Deep-Charcoal);
+
 }
 
 
