--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -5,7 +5,6 @@
   padding: 0.5rem 1rem;
     
   background-color: var(--Deep-Charcoal);
-
   position: relative;
 
     .nav__title {
@@ -13,8 +12,14 @@
       font-weight: 700;
       color: var(--Rich-Burgundy);
 
-      border-bottom: 2px solid var(--Deep-Charcoal);
+      border-bottom: 2px solid var(--Rich-Burgundy);
       width: 100%;
+    }
+
+    .nav__actions {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
     }
 }
 
