--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -20,6 +20,10 @@
       display: flex;
       align-items: center;
       gap: 1rem;
+
+      .nav__login--btn {
+        fill: var(--Cream-Ivory);
+      }
     }
 }
 
