--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -3,10 +3,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1rem 1rem;
+  padding: 1rem 1rem 0;
     
   background-color: var(--Deep-Charcoal);
   position: relative;
+
+  .logo {
+    margin-bottom: 1rem;
+  }
 
   .nav__title {
     font-family: var(--Heading-Font);
