--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -39,7 +39,7 @@
 
 .navbar.navbar--open .menu__icon--close {
   display: block;
-  position: absolute;
+  position: fixed;
   top: 1.5rem;
   right: 0.5rem;
 
