--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -6,6 +6,7 @@
 
     overflow-x: auto;
     scroll-snap-type: x mandatory;
+    animation: slide 6s infinite;
 
   @media (prefers-reduced-motion: no-preference) {
     scroll-behavior: smooth;
