--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -71,13 +71,20 @@
 
 .reservation {
   padding: 1rem 0 0;
-
   background-color: var(--Gold-Brass);
 
-  .reservation__content {
+  .reservation__text {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+
+    gap: 0.5rem;
+    margin-top: 2.5rem;
+
+    .reservation__title {
+      font-family: var(--Heading-Font);
+      font-weight: 700;
+      text-transform: uppercase;
+    }
   }
 }
