added slight top margin between the carousel and reservation section to highlight the transition

--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -71,6 +71,8 @@
 
 .reservation {
   padding: 1rem 0 0;
+  margin-top: 0.25rem;
+
   background-color: var(--Gold-Brass);
 
   .reservation__text {
