--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -87,3 +87,19 @@
     }
   }
 }
+
+.menu__preview--grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  
+  padding: 1rem 0;
+  gap: 1rem;
+
+  .category__card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    text-transform: uppercase;
+  }
+}
