--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -90,16 +90,30 @@
 
 .menu__preview--grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  
-  padding: 1rem 0;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  padding: 0 1rem;
+  margin: 2rem 0;
   gap: 1rem;
 
   .category__card {
     display: flex;
     flex-direction: column;
-    align-items: center;
 
     text-transform: uppercase;
+    text-align: center;
+    gap: 0.5rem;
+
+    .category__image-container {
+      width: 100%;
+      aspect-ratio: 1 / 1;
+      overflow: hidden;
+    }
+
+    .category__image-container img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; 
+      display: block;
+    }
   }
 }
