--- a/src/components/buttons/button.css
+++ b/src/components/buttons/button.css
@@ -4,10 +4,11 @@
 
     border-radius: 0.25rem;
     border: none;
-    padding: 0.75rem 1rem;
+    padding: 0.75rem 1.25rem;
 
     font-family: var(--Text-Font);
     font-weight: 700;
     font-size: 1rem;
     letter-spacing: 0.1rem;
+    text-transform: uppercase;
 }
