--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -14,6 +14,10 @@
   anchor-name: --carousel;
   scroll-marker-group: after;
 
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
   &::scroll-marker-group {
     display: flex;
     justify-content: center;
@@ -154,6 +158,7 @@
 .learn__more--section {
   background-color: var(--Gold-Brass);
   padding: 3rem 1rem;
+  margin: 4rem 0;
 
   .learn__more--grid {
     display: grid;
@@ -175,4 +180,31 @@
 
 .margin__md {
   margin: 3rem 0 0 0;
+}
+
+.instagram__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+
+  margin: 4rem 0;
+
+  .instagram__title {
+    text-transform: uppercase;
+    color: var(--Rich-Burgundy);
+  }
+}
+
+.instagram__images--carousel {
+  display: flex;
+  gap: 1rem;
+  padding: 2rem 1rem;
+
+  overflow-x: scroll;
+  scroll-behavior: smooth;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
