lowered nav title font size and lowered the gap between the contact intro bg and carousel

--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -15,6 +15,7 @@
   .nav__title {
     font-family: var(--Heading-Font);
     font-weight: 700;
+    font-size: 1.75rem;
     color: var(--Rich-Burgundy);
     width: 100%;
   }
