--- a/src/pages/about/About-us.css
+++ b/src/pages/about/About-us.css
@@ -142,3 +142,36 @@
     height: 200px;        
     object-fit: cover;      
 }
+
+.community__impact--container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    margin: 2rem 0 2rem;
+    padding: 0 2rem;
+}
+
+.community__impact--title {
+    margin: 0 0 1rem;
+    color: var(--Rich-Burgundy);
+    font-weight: 700;
+}
+
+.community__impact--item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 0.5rem;
+    margin: 0 0 2rem;
+
+    h2 {
+        font-size: 1rem;
+    }
+}
+
+.community__impact--item:nth-child(4) {
+    margin: 0 0 1.5rem;
+}
