--- a/src/pages/made-from-scratch/Made-From-Scratch.css
+++ b/src/pages/made-from-scratch/Made-From-Scratch.css
@@ -14,3 +14,95 @@
         text-align: center;
     }
 }
+
+.from__scratch--carousel {
+  display: grid;
+  grid-auto-flow: column;
+  grid-auto-columns: 100%;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  position: relative;
+
+  height: 60vh;
+  scrollbar-width: none; 
+  &::-webkit-scrollbar { display: none; }
+
+  anchor-name: --carousel;
+  scroll-marker-group: after;
+
+  @media (prefers-reduced-motion: no-preference) {
+    scroll-behavior: smooth;
+  }
+
+  &::scroll-marker-group {
+    display: flex;
+    justify-content: center;
+    gap: 0.5rem;
+    padding: 1rem;
+    
+    position: fixed;
+    position-anchor: --carousel;
+    position-area: bottom; /* Places it below the carousel */
+    left: 50%;
+    top: -5.5vh;
+    transform: translateX(-50%);
+    z-index: 10;
+  }
+
+  & li {
+    scroll-snap-align: center;
+    width: 100%;
+    position: relative;
+
+    &::scroll-marker {
+      content: "";
+      width: 0.75rem;
+      height: 0.75rem;
+      border-radius: 100%;
+      border: 2px solid var(--Gold-Brass);
+      background: transparent;
+      cursor: pointer;
+      display: inline-block;
+    }
+
+    &::scroll-marker:target-current {
+      background: var(--Rich-Burgundy);
+      border-color: var(--Gold-Brass);
+    }
+  }
+
+
+  &::scroll-button(*) {
+    position: absolute;
+    position-anchor: --carousel;
+    padding: 0.5rem;
+    background: var(--Gold-Brass);
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    z-index: 20;
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+
+  &::scroll-button(right) {
+    content: "❯";
+    position-area: right;
+    right: 1rem;
+  }
+
+  &::scroll-button(left) {
+    content: "❮";
+    position-area: left;
+    left: 1rem;
+  }
+}
+
+.carousel__item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
