--- a/src/pages/home/HomePage.css
+++ b/src/pages/home/HomePage.css
@@ -248,4 +248,34 @@
       margin: 0 auto;
     }
   }
+
+  .menu__title {
+    margin: 4rem 0 0;
+  }
+
+  .menu__preview--grid {
+    grid-template-columns: repeat(auto-fit, minmax(19vw, 1fr));
+    padding: 0 10vw;
+
+    .category__card {
+      .category__info {
+        min-height: 6rem;
+
+        .category__name {
+          font-size: 1.5rem;
+        }
+      }
+
+      .category__image-container {
+       height: 15.625rem;
+      }
+    }
+  }
+
+  .category__card:hover,
+  .category__card:active {
+    transform: scale(1.02);
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+  }
 }
