--- a/src/pages/menu/MenuPage.css
+++ b/src/pages/menu/MenuPage.css
@@ -137,6 +137,10 @@
 
 @media only screen and (min-width: 768px) {
 
+    .menu__header {
+
+    }
+
     .menu__main-section {
         display: flex;
         flex-direction: row; /* Move sidebar to the left */
@@ -176,6 +180,7 @@
         scroll-behavior: unset;
         overflow-x: unset;
         scroll-snap-type: unset;
+        gap: 1rem;
 
         li {
             scroll-snap-align: unset;
